Added some more charts for practice

--- a/src/components/zingchart/zingchart.html
+++ b/src/components/zingchart/zingchart.html
@@ -1,4 +1,4 @@
 <!-- Generated template for the ZingchartComponent component -->
-<div id="{{chart.id}}">
+<div id="{{chart.id}}" class="chart">
   
 </div>
